Updated users and blogpost
